rubocop/examples/bad/Style_SpaceBeforeComma.rb
# TODO: Checks for comma (,) preceded by space.
